# trading-bot

./: QUESTIONS.md  README.md  pyproject.toml  pyrightconfig.json
trading_bot/: config.py  events.py  execution.py  main.py  market.py  risk.py  state.py  strategy.py  types.py
trading_bot/exchange/: __init__.py  exchange.py
trading_bot/exchange/binance/: __init__.py  binance.py  types.py  utils.py
trading_bot/exchange/deribit/: __init__.py  deribit.py  types.py
trading_bot/types/: __init__.py  market.py  observer.py  types.py
trading_bot/utils/: __init__.py  logger.py  ws.py
