[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["jaredgoldman <jaredgoldmandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trading-bot = "trading_bot.main:main"
